appId: com.anonymous.pocketenvelopes
---
- launchApp:
    clearState: true
- runFlow: "login_flow.yaml"
- tapOn:
    point: 84%,8%
- tapOn:
    point: 37%,22%
- tapOn: "CANCELAR"
- tapOn: "Sair da Conta"